--- a/assets/css/3-modules/header.sass
+++ b/assets/css/3-modules/header.sass
@@ -17,7 +17,7 @@
 	.logo
 		+hide-text
 		background:
-			image: url(/assets/img/logo-tn.svg)
+			// image: url(/assets/img/logo-tn.svg)
 			repeat: no-repeat
 			position: center
 			size: contain
