--- a/assets/css/3-modules/header.sass
+++ b/assets/css/3-modules/header.sass
@@ -1,45 +1,138 @@
-.home-wrap header 
+.home-wrap 
+	header 
+		width: 135px
+		padding: 30px 0
 
-	.header-position
-	    position: fixed;
-	    top: 0px;
-	    padding-top: 30px;
-	    left: 0;
-	    bottom: 0px;
-	    padding-bottom: 30px;
-	    width: 135px;
-	    display: flex;
-	    flex-direction: column;
-	    justify-content: space-between;
-	    background-color: white;
+		.header-position
+		    position: fixed
+		    top: 0px
+		    padding-top: 30px
+		    left: 0
+		    bottom: 0px
+		    padding-bottom: 30px
+		    width: 135px
+		    display: flex
+		    flex-direction: column
+		    justify-content: space-between
+		    background-color: white
 
 
-	.logo
-		+hide-text
-		background:
-			// image: url(/assets/img/logo-tn.svg)
-			repeat: no-repeat
-			position: center
-			size: contain
-			color: pink
-		height: 80px
-		padding: 0
-		margin: 0
+		.logo
+			+hide-text
+			max-width: 135px
+			background:
+				// image: url(/assets/img/logo-tn.svg)
+				repeat: no-repeat
+				position: center
+				size: contain
+				color: pink
+			height: 80px
+			padding: 0
+			margin: 0
 
-	.site-nav
-		ul 
-			list-style: none
-			margin: 20px 0
-			padding: 0 20px 0 0
+		.site-nav
+			ul 
+				list-style: none
+				margin: 20px 0
+				padding: 0 20px 0 0
+				text-align: right
+
+				li
+					margin-bottom: 10px
+
+					&:last-child
+						margin-bottom:  0
+
+		.email-link
+			display: block
 			text-align: right
+			padding-right: 20px
 
-			li
-				margin-bottom: 10px
+		.mobile-nav-toggle
+			display: none
+			width: 50px
+			height: 50px
+			//background: pink
+			margin-right: 20px
+			align-items: center
+			cursor: pointer
 
-				&:last-child
-					margin-bottom:  0
+			span,
+			span:before,
+			span:after
+				content: ""
+				display: block
+				height: 2px
+				background: #333
+				position: relative
 
-	.email-link
-		display: block
-		text-align: right
-		padding-right: 20px
+				transition: all 0.3s ease-in-out
+
+			span:before
+				top: 15px
+
+			span:after
+				bottom: -17px
+
+			&.is-open span
+				background: transparent
+
+			&.is-open span:before,
+			&.is-open span:after
+				transform-origin: center
+				transform: rotate(45deg)
+				top: 0
+
+			&.is-open span:before
+				transform: rotate(-45deg)
+
+	//Mobile Nav
+	.mobile-nav
+		display: none
+		position: absolute
+		width: 100%
+		background: white
+		padding: 30px 0 20px
+		transform: translateY(-100%)
+		transition: all 0.3 ease-in-out
+		
+		ul
+			list-style: none
+			margin: 0
+			padding: 0
+
+		li
+			text-align: center
+			margin-bottom: 10px
+
+				
+
+@media (max-width: 775px)
+	.home-wrap 
+		header
+			width: auto
+			padding: 0px 0px
+
+			.header-position
+				width: auto
+				position: relative 
+				top: auto
+				bottom: auto
+				left: auto
+				flex-direction: row
+				align-items: center
+
+			.site-nav,
+			.email-link
+				display: none
+
+			.logo
+				height: 45px
+
+			.mobile-nav-toggle
+				display: flex
+
+			.mobile-nav.is-open
+				display: block
+				transform: translateY(0%)
+
