fixed issue with viewport in full screen mode, but still struggling to make resonsive header

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -656,15 +656,13 @@ input[type="button"] {
 
 @media (max-width: 775px) {
   .home-wrap header {
-    width: auto;
-    padding: 0px 0px; }
+    width: auto; }
     .home-wrap header .header-position {
       width: auto;
       position: relative;
       top: auto;
       bottom: auto;
       left: auto;
-      flex-direction: row;
       align-items: center; }
     .home-wrap header .site-nav,
     .home-wrap header .email-link {
