--- a/assets/css/3-modules/header.sass
+++ b/assets/css/3-modules/header.sass
@@ -25,7 +25,6 @@
 				repeat: no-repeat
 				position: center
 				size: contain
-				color: pink
 			height: 80px
 			padding: 0
 			margin: 0
@@ -37,11 +36,11 @@
 				padding: 0 20px 0 0
 				text-align: right
 
-				li
-					margin-bottom: 10px
+			li
+				margin-bottom: 10px
 
-					&:last-child
-						margin-bottom:  0
+				&:last-child
+					margin-bottom:  0
 
 		.email-link
 			display: block
@@ -52,7 +51,6 @@
 			display: none
 			width: 50px
 			height: 50px
-			//background: pink
 			margin-right: 20px
 			align-items: center
 			cursor: pointer
@@ -72,67 +70,41 @@
 				top: 15px
 
 			span:after
-				bottom: -17px
+				bottom: -17px	
+			
+			&:hover span
+				background: transparent	
 
-			&.is-open span
-				background: transparent
-
-			&.is-open span:before,
-			&.is-open span:after
+			&:hover span:before,	
+			&:hover span:after
 				transform-origin: center
 				transform: rotate(45deg)
 				top: 0
 
-			&.is-open span:before
+			&:hover span:before
 				transform: rotate(-45deg)
-
-	//Mobile Nav
-	.mobile-nav
-		display: none
-		position: absolute
-		width: 100%
-		background: white
-		padding: 30px 0 20px
-		transform: translateY(-100%)
-		transition: all 0.3 ease-in-out
-		
-		ul
-			list-style: none
-			margin: 0
-			padding: 0
-
-		li
-			text-align: center
-			margin-bottom: 10px
-
 				
 
 @media (max-width: 775px)
-	.home-wrap 
-		header
+	.home-wrap header
+		width: auto
+		padding: 20px 0
+
+		.header-position
 			width: auto
-			// padding: 0px 0px
+			position: relative
+			top: auto
+			bottom: auto
+			left: auto
+			flex-direction: row
+			align-items: center
 
-			.header-position
-				width: auto
-				position: relative 
-				top: auto
-				bottom: auto
-				left: auto
-				flex-direction: row
-				align-items: center
+		.site-nav,
+		.email-link
+			display: none
 
-			.site-nav,
-			.email-link
-				display: none
+		.logo
+			height: 45px
 
-			.logo
-				height: 45px
-
-			.mobile-nav-toggle
-				display: flex
-
-			.mobile-nav.is-open
-				display: block
-				transform: translateY(0%)
-
+		.mobile-nav-toggle
+			display: flex
